src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Campaign_Member_Owner_Role__c</fullName>
        <description>Displays the role of the campaign member&apos;s record owner based on: Lead_Contact_Owner_Role__c and Contact_Owner_Role__c</description>
        <formula>Lead_Owner_Role__c  +  Contact_Owner_Role__c</formula>
        <label>Campaign Member Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfirmationNumber__c</fullName>
        <description>For CVent Integration</description>
        <inlineHelpText>For CVent Integration</inlineHelpText>
        <label>ConfirmationNumber</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Role__c</fullName>
        <formula>Contact.Contact_Owner_Role__c</formula>
        <label>Contact Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Organization__c</fullName>
        <label>IP-Based Organization</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Postal_Code__c</fullName>
        <label>IP-Based Zip/Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <formula>TEXT(FCRM__FCR_Opportunity__r.Deal_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DiscountAmount__c</fullName>
        <description>For CVent Integration</description>
        <inlineHelpText>For CVent Integration</inlineHelpText>
        <label>DiscountAmount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DiscountCode__c</fullName>
        <description>For CVent Integration</description>
        <inlineHelpText>For CVent Integration</inlineHelpText>
        <label>DiscountCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DiscountValue__c</fullName>
        <description>For CVent Integration</description>
        <inlineHelpText>For CVent Integration</inlineHelpText>
        <label>DiscountValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not QL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventCode__c</fullName>
        <description>For CVent Integration</description>
        <inlineHelpText>For CVent Integration</inlineHelpText>
        <label>EventCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FCCRM_Member_Threshold__c</fullName>
        <description>Score threshold evaluated in addition to the related lead/contact and campaign threshold values.</description>
        <formula>IF( 
	OR ( 
		ISPICKVAL( 
			Campaign.Campaign_Type__c ,&quot;Contact Me&quot;), /* If campaign type is contact me, set to true*/ 
		AND(ISPICKVAL(Status,&quot;Visited Booth - P1 (Hot)&quot;),
			Do_Not_MQL__c=FALSE),
		AND(
			ISPICKVAL( 
			Campaign.Campaign_Type__c,&quot;Self-Serve&quot;),
			Profile_Score_Current__c &lt;&gt; &quot;D&quot;),
		AND ( 
				Do_Not_MQL__c=FALSE, /* Do not QL is False */ 
				NOT(ISPICKVAL(Campaign.Campaign_Type__c,&quot;Email&quot;)),
				NOT(ISPICKVAL(Status,&quot;Visited Booth - P3 (Cold)&quot;)), /* Status is not P3 */ 
				Profile_Score_Current__c &lt;&gt; &quot;D&quot;, /* Do not QL if score is &apos;d&apos; */		 
				NOT( 
					AND(	/*Campaign = &quot;Content Marketing&quot; and Profile Score = &quot;C&quot; */ 
						ISPICKVAL(Campaign.Campaign_Type__c,&quot;Content Marketing&quot;), 
						Profile_Score_Current__c = &quot;C&quot; 
					)), 
				NOT( 
					AND(	/*Campaign = &quot;Webinar&quot; and Profile Score = &quot;C&quot;*/ 
						ISPICKVAL( 
							Campaign.Campaign_Type__c,&quot;Webinar&quot;), 
						ISPICKVAL(Status,&quot;No Show&quot;) 
					)), 
				NOT( 
					AND(	
						ISPICKVAL( 
							Campaign.Campaign_Type__c,&quot;Event&quot;), 
						ISPICKVAL( Campaign.Campaign_Sub_Type__c,&quot;Field Event&quot;), 
						ISPICKVAL(Status,&quot;Attended&quot;) 
					)) 
		) 
	),2000, -2000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Score threshold evaluated in addition to the related lead/contact and campaign threshold values.</inlineHelpText>
        <label>FCCRM Member Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_18_Character_ID__c</fullName>
        <description>Displays 18 Character Campaign Member ID</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>Displays 18 Character Campaign Member ID</inlineHelpText>
        <label>Campaign Member 18 Character ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Opportunity_Status__c</fullName>
        <description>Administrative field to determine if a response is tied to an opportunity, and if so, the status of that opportunity</description>
        <formula>IF(OR(ISBLANK(ContactId), ISBLANK( FCRM__FCR_Opportunity__c ),  ISPICKVAL(FCRM__FCR_Response_Status__c, &apos;Resolved - Non-Response RT&apos;)  ),
    0,
    IF(FCRM__FCR_Opportunity__r.IsClosed ,
         IF( FCRM__FCR_Opportunity__r.IsWon , 2, 3),
        1)
)
/*
0 - Lead or no opportunity
1 - Open opportunity
2 - Opportunity closed won
3 - Opportunity closed lost
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Opportunity Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Response_Control__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Numeric field to override standard processing of responses during evaluation</description>
        <label>Admin Response Control</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Response_Day__c</fullName>
        <description>Converts the response date field (date time) to a response date for report processing</description>
        <formula>if(ISBLANK(FCRM__FCR_Response_Date__c),DATE(1970,1,1),DATEVALUE(FCRM__FCR_Response_Date__c ))</formula>
        <label>Response Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_SyncPending__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Set when a field sync to this response is pending (async)
1 - Sync the fields if SyncOnUpdate
2 - Sync the fields if SyncOnCreate
3 - Clear the fields.</description>
        <label>Admin SyncPending</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_SyncTest__c</fullName>
        <description>Used internally by the response management system for testing purposes</description>
        <label>Admin Sync Test</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Admin_Update_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This counter is changed any time this object is updated by the response management system. Look for changes in this value during validation rules to disable the rule and allow the update.</description>
        <label>Admin Update Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Campaign_Repeat_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the cascade parent campaign, or the campaign (if this is not a repeat)</description>
        <inlineHelpText>This field is used in reporting to group all responses by Repeat Parent Campaign.</inlineHelpText>
        <label>Campaign Name (Repeat Parent)</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign Members (Campaign Name (Repeat Parent))</relationshipLabel>
        <relationshipName>Campaign_Members_With_Repeats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_CascadeID__c</fullName>
        <description>This formula field is used to simplify queries for cascaded campaignmembers.
First part is the campaignID if there is no parent, or the parent campaignID if there is. Second part is the contactID if present, otherwise the lead ID</description>
        <formula>IF(ISBLANK(Campaign.FCRM__FCR_CascadeParent__c), CampaignId , Campaign.FCRM__FCR_CascadeParent__c )  + BLANKVALUE( ContactId , LeadId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin_CascadeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_ClosedOpRevenueModel1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Closed won opportunity revenue for primary campaign influence model</description>
        <label>Closed Op Revenue Model1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_ClosedOpRevenueModel2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Closed opportunity revenue for secondary campaign influence model</description>
        <label>Closed Op Revenue Model2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_ClosedOpRevenueModel3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Closed opportunity revenue for tertiary campaign influence model</description>
        <label>Closed Op Revenue Model3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Converted_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the response was active when the lead was converted</description>
        <label>Converted Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Current_Lead_Contact_Status__c</fullName>
        <description>Displays the current status of the related lead or contact. Looks at the standard lead status field or the Full Circle CRM Contact Status field.</description>
        <formula>IF(NOT(ISBLANK( ContactId )), TEXT(Contact.FCRM__FCR_Status__c) ,  TEXT(Lead.Status) )</formula>
        <inlineHelpText>Displays the current status of the related lead or contact.</inlineHelpText>
        <label>Current Lead/Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Dated_Opportunity_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Opportunity amount based on dated conversion - set during campaign influence</description>
        <label>Dated Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_FCCRM_Logo__c</fullName>
        <formula>IMAGE(&quot;/resource/Full_Circle_CRM_Sm_Logo&quot;, &quot;Full Circle CRM&quot;,25, 80)</formula>
        <label>||</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_First_Owner_Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>First Owner (non-queue) assigned a response.</inlineHelpText>
        <label>First Owner Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Response_First_Owned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_First_Owner_Type__c</fullName>
        <description>First Owner Assigned Type - User or Queue</description>
        <inlineHelpText>First Owner Assigned Type - User or Queue</inlineHelpText>
        <label>First Owner Type</label>
        <picklist>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_First_Owner_Worked__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>First Owner to set a lead/contact status to a working status when the response is active</inlineHelpText>
        <label>First Owner Worked</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Response_First_Worked</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_First_Queue_Assigned__c</fullName>
        <description>If first owner assigned is a lead queue - queue name will be set here.</description>
        <inlineHelpText>If first owner assigned is a lead queue - queue name will be set here.</inlineHelpText>
        <label>First Queue Assigned</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Inquiry_Target_Date__c</fullName>
        <description>Date Inquiry or Target was set</description>
        <label>Inquiry/Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Inquiry_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has responded to a Marketing Campaign, or is a Sales Target</description>
        <label>Inquiry/Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Inquiry_to_MQR__c</fullName>
        <description># Days from Inquiry/Target to MQR/QR - Evaluates to blank if MQR/QR Date if blank.</description>
        <formula>FCRM__FCR_QR_Date__c - FCRM__FCR_Inquiry_Target_Date__c</formula>
        <inlineHelpText># Days from Inquiry/Target to MQR/QR</inlineHelpText>
        <label>Inquiry to MQR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Last_Modified_By_Date_Formula__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By Date Formula</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Last_Modified_By_Formula__c</fullName>
        <formula>LastModifiedBy.FirstName &amp; &quot; &quot; &amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Lead_Contact_18_Digit_ID__c</fullName>
        <formula>CASESAFEID(BLANKVALUE( ContactId , LeadId ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_LostOpRevenueModel1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lost opportunity revenue for primary campaign influence model</description>
        <label>Lost Op Revenue Model1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_LostOpRevenueModel2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lost opportunity revenue for secondary campaign influence model</description>
        <label>Lost Op Revenue Model2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_LostOpRevenueModel3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Lost opportunity revenue for tertiary campaign influence model</description>
        <label>Lost Op Revenue Model3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_MQR_to_SAR__c</fullName>
        <description># Days from MQR/QR to SAR - Evaluates to blank if MQR/QR Date if blank.</description>
        <formula>FCRM__FCR_SAR_Date__c -  FCRM__FCR_QR_Date__c</formula>
        <inlineHelpText># Days from MQR/QR to SAR.</inlineHelpText>
        <label>MQR to SAR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Member_Type_On_Create__c</fullName>
        <description>Admin field specifying whether the CampaignMember was originally created by a lead or a contact</description>
        <label>Member Type On Create</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Name_Created_Date__c</fullName>
        <description>Displays the lead or contact Name Created Date.</description>
        <formula>IF(IsBlank(ContactId ), Lead.FCRM__FCR_Name_Created_Date__c, Contact.FCRM__FCR_Name_Created_Date__c )</formula>
        <inlineHelpText>Displays the lead or contact Name Created Date.</inlineHelpText>
        <label>Name Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Net_New_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if associated lead or contact was created within 5 minutes of this response.</description>
        <label>Net New Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Nurture_Timeout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when the lead/contact was set to nurture time out and therefore this response was not processed by the system.</description>
        <label>Nurture Timeout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_OpenOpRevenueModel1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Open opportunity revenue for primary campaign influence model</description>
        <label>Open Op Revenue Model1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_OpenOpRevenueModel2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Open opportunity revenue for secondary campaign influence model</description>
        <label>Open Op Revenue Model2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_OpenOpRevenueModel3__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Open opportunity revenue for tertiary campaign influence model</description>
        <label>Open Op Revenue Model3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Amount__c</fullName>
        <formula>if( FCRM__FCR_Dated_Opportunity_Amount__c &gt;0,  FCRM__FCR_Dated_Opportunity_Amount__c, FCRM__FCR_Opportunity__r.Amount)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Cleared__c</fullName>
        <description>If an opportunity was associated to a Campaign and then deleted - the date of deletion is set here.</description>
        <inlineHelpText>If an opportunity was associated to a Campaign and then deleted - the date of deletion is set here.</inlineHelpText>
        <label>Opportunity Cleared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Closed_Date__c</fullName>
        <formula>FCRM__FCR_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Closed_Won__c</fullName>
        <description>Evaluates to &quot;True&quot; if Opportunity is Won - else is blank.  Requires that the opportunity name is populated.</description>
        <formula>IF(
AND(
NOT(ISBLANK( FCRM__FCR_Opportunity__c )),
FCRM__FCR_Opportunity__r.IsWon = True), &quot;True&quot;, null)</formula>
        <inlineHelpText>Evaluates to &quot;True&quot; if Opportunity is Won - else is blank. Requires that the opportunity name is populated.</inlineHelpText>
        <label>Opportunity Closed Won</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Closed__c</fullName>
        <formula>IF(
AND(
NOT(ISBLANK( FCRM__FCR_Opportunity__c )),
 FCRM__FCR_Opportunity__r.IsClosed  = True), &quot;True&quot;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Count__c</fullName>
        <description>Evaluates to 1 if there is a related opportunity - used for funnel reports.</description>
        <formula>IF ( NOT(ISBLANK( FCRM__FCR_Opportunity__c )),1,0)</formula>
        <inlineHelpText>Evaluates to 1 if there is a related opportunity - used for funnel reports.</inlineHelpText>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Create_Date__c</fullName>
        <formula>DATEVALUE(FCRM__FCR_Opportunity__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Created_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that created the opportunity</description>
        <label>Opportunity Created by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Value_Lost__c</fullName>
        <description>Amount of related lost opportunity. Based on standard opportunity Amount field.</description>
        <formula>IF( 
AND( 
NOT(ISBLANK( FCRM__FCR_Opportunity__c )), 
 FCRM__FCR_Opportunity__r.IsClosed = True,
  FCRM__FCR_Opportunity__r.IsWon = False 
) , FCRM__FCR_Opportunity_Amount__c , 0)</formula>
        <inlineHelpText>Amount of related lost opportunity. Based on standard opportunity Amount field.</inlineHelpText>
        <label>Opportunity Value Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity_Value_Won__c</fullName>
        <description>Amount of related Won opportunity. Based on standard opportunity Amount field.</description>
        <formula>IF( NOT(ISBLANK(FCRM__FCR_Opportunity_Closed_Won__c)) ,  FCRM__FCR_Opportunity_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of related Won opportunity. Based on standard opportunity Amount field.</inlineHelpText>
        <label>Opportunity Value Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If an opportunity was created as a result of this MQR follow up the Opportunity Name field will be populated.</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaign Members</relationshipLabel>
        <relationshipName>Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Precedence_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set to the campaign of the response specified in FCR_Precedence_Response__c</description>
        <label>Precedence Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Precedence Campaign Members</relationshipLabel>
        <relationshipName>Precedence_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Precedence_Replaced_Date__c</fullName>
        <description>Specifies the date at which this response was replaced by a response to a precedence campaign</description>
        <label>Precedence Replaced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Precedence_Response_Link__c</fullName>
        <formula>IF(
NOT(ISBLANK(FCRM__FCR_Precedence_Response__c)),HYPERLINK(&quot;/&quot; &amp;  FCRM__FCR_Precedence_Response__c,&quot;View Precedence Response&quot;),&quot;&quot;)</formula>
        <inlineHelpText>If populated, Click here to view the precedence response</inlineHelpText>
        <label>Precedence Response Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Precedence_Response__c</fullName>
        <description>Set to the ID of a precedence response that replace this one when it was active.</description>
        <label>Precedence Response ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_QR_Date__c</fullName>
        <description>Date MQR Achieved</description>
        <label>MQR/QT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_QR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>System checks this field if the record has met the score qualification threshold.</description>
        <label>MQR/QT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Repeat_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description># of this repeat 1 = first repeat response.</description>
        <label>Repeat Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Replaced_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the ID of the campaign of that was replaced by this response.</description>
        <label>Replaced Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Replaced Campaign Members</relationshipLabel>
        <relationshipName>Replaced_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Replaced_Response_Link__c</fullName>
        <formula>IF( 
NOT(ISBLANK( FCRM__FCR_Replaced_Response__c )),HYPERLINK(&quot;/&quot; &amp; FCRM__FCR_Replaced_Response__c,&quot;View Replaced Response&quot;),&quot;&quot;)</formula>
        <inlineHelpText>If populated, click here to view the replaced response.</inlineHelpText>
        <label>Replaced Response Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Replaced_Response__c</fullName>
        <description>Specifies the ID of the response that was replaced by this response (this is a precedence response)</description>
        <label>Replaced Response ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Response_Date__c</fullName>
        <description>Response date</description>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Response_Engagement_Level__c</fullName>
        <description>Displays engagement level for responses.</description>
        <formula>IF ( ISPICKVAL( FCRM__FCR_Response_Status__c , &quot;Resolved - No Action Required&quot;), &quot;1. No Action Required&quot;,
IF ( ISPICKVAL( FCRM__FCR_Response_Status__c , &quot;Legacy&quot;), &quot;1. No Action Required&quot;,  
IF ( ISPICKVAL( FCRM__FCR_Response_Status__c , &quot;Resolved - Already Engaged&quot;), &quot;3. Already Engaged&quot;, 
IF ( ISPICKVAL (FCRM__FCR_Response_Status__c , &quot;Not A Response&quot;), &quot;Not A Response&quot;, 
IF (ISBLANK( FCRM__FCR_Response_Date__c ), &quot;Not A Response&quot;, 
&quot;2. Engagement&quot;)))))</formula>
        <inlineHelpText>Displays engagement level for responses.</inlineHelpText>
        <label>Response Engagement Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Response_Score__c</fullName>
        <description>Score assigned to this response</description>
        <label>Response Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Response_Status__c</fullName>
        <description>Current response status</description>
        <label>Response Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempting Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recycled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified - New Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved - Already Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved - No Action Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved - Opportunity Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved - Opportunity Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmapped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Revenue_Timestamp__c</fullName>
        <description>Timestamp of batch request that set campaign influence revenue data</description>
        <label>Revenue Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_SAR_Date__c</fullName>
        <description>Sales accepted response date</description>
        <label>SAR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_SAR_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner at the time when the record status mapping to SAR is set on the lead, contact or opportunity.</description>
        <label>SAR Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SAR_Campaign_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_SAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set if this is a sales accepted response (sync from lead/contact status)</description>
        <label>SAR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_SAR_to_SQR__c</fullName>
        <description># Days from SAR to SQR - Evaluates to blank if SQR Date if blank.</description>
        <formula>FCRM__FCR_SQR_Date__c -  FCRM__FCR_SAR_Date__c</formula>
        <inlineHelpText># Days from SAR to SQR</inlineHelpText>
        <label>SAR to SQR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_SQR_Date__c</fullName>
        <description>Date SQR Set (Converted to Opportunity)</description>
        <label>SQR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_SQR_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SQR Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_SQR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Response was Qualified (converted)</description>
        <label>SQR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_SQR_to_Closed_Won__c</fullName>
        <description># Days from SQR to Closed/Won - Evaluates to blank if Closed/Won Date if blank.</description>
        <formula>IF(  FCRM__FCR_Opportunity_Closed_Won__c = &quot;True&quot;, FCRM__FCR_Opportunity_Closed_Date__c -  FCRM__FCR_SQR_Date__c , null)</formula>
        <inlineHelpText># Days from SQR to Closed/Won</inlineHelpText>
        <label>SQR to Closed/Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Status_Age__c</fullName>
        <formula>IF( 
NOT(ISBLANK(FCRM__FCR_Status_Last_Set__c)), 
ROUND(NOW()-FCRM__FCR_Status_Last_Set__c, 0), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_Status_Last_Set__c</fullName>
        <description>Date/time when status was last updated</description>
        <label>Status Last Set</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_TQR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this Response passed threshold and proceeded to be evaluated. On Lead/Contact passing organizations, FCR_QR will also be set.</description>
        <label>Threshold QR</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>